--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
+    "type-fest": "^5.0.1",
     "typescript": "^5"
   }
 }
