--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.1",
     "@trpc/client": "^11.5.1",
     "@trpc/next": "^11.5.1",
@@ -24,9 +25,11 @@
     "@trpc/server": "^11.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "tailwind-merge": "^3.3.1",
