--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
+    "prepare": "husky",
     "db:seed": "npx tsx prisma/seed.ts",
     "db:studio": "npx prisma studio",
     "ts": "yarn tsc --noEmit",
@@ -18,9 +19,9 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-tooltip": "^1.1.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.1.9",
     "@tanstack/react-query": "^5.90.1",
     "@trpc/client": "^11.5.1",
     "@trpc/next": "^11.5.1",
@@ -45,10 +46,17 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.3",
     "prisma": "^6.16.2",
     "tailwindcss": "^4.1.13",
     "tw-animate-css": "^1.4.0",
     "type-fest": "^5.0.1",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx,js,jsx,cjs,mjs,json,md,css,scss}": [
+      "npm run format"
+    ]
   }
 }
