--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write",
+    "format": "biome check --write",
     "prepare": "husky",
     "db:seed": "npx tsx prisma/seed.ts",
     "db:studio": "npx prisma studio",
