--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,9 @@
       "recommended": true,
       "suspicious": {
         "noUnknownAtRules": "off"
+      },
+      "style": {
+        "useConsistentCurlyBraces": "error"
       }
     },
     "domains": {
