--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "format": "biome check --write",
     "prepare": "husky",
     "db:seed": "npx tsx prisma/seed.ts",
+    "db:seed:prod": "npx tsx prisma/seed-prod.ts",
     "db:studio": "npx prisma studio",
     "ts": "yarn tsc --noEmit",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma migrate deploy && npm run db:seed && next build"
+    "vercel-build": "prisma migrate deploy && npm run db:seed:prod && next build"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
