--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-auth": "^5.0.0-beta.29",
     "react": "19.2.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.2.0",
