--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "db:seed": "npx tsx prisma/seed.ts",
     "db:seed:prod": "npx tsx prisma/seed-prod.ts",
     "db:studio": "npx prisma studio",
+    "db:backfill:user": "npx tsx scripts/backfill-user-ownership.ts",
     "ts": "yarn tsc --noEmit",
     "postinstall": "prisma generate",
     "vercel-build": "prisma migrate deploy && npm run db:seed:prod && next build"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
