--- a/package.json
+++ b/package.json
@@ -19,45 +19,45 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-tooltip": "^1.1.9",
-    "@tanstack/react-query": "^5.90.1",
-    "@trpc/client": "^11.5.1",
-    "@trpc/next": "^11.5.1",
-    "@trpc/react-query": "^11.5.1",
-    "@trpc/server": "^11.5.1",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.6",
+    "@trpc/client": "^11.7.1",
+    "@trpc/next": "^11.7.1",
+    "@trpc/react-query": "^11.7.1",
+    "@trpc/server": "^11.7.1",
     "babel-plugin-react-compiler": "1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.544.0",
-    "next": "15.5.4",
-    "next-auth": "^5.0.0-beta.29",
-    "react": "19.2.0",
-    "react-day-picker": "^9.11.0",
-    "react-dom": "19.2.0",
-    "react-hook-form": "^7.63.0",
+    "lucide-react": "^0.552.0",
+    "next": "^16.0.1",
+    "next-auth": "^5.0.0-beta.30",
+    "react": "^19.2.0",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.11"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.5",
+    "@biomejs/biome": "2.3.2",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "husky": "^9.1.7",
-    "lint-staged": "^16.2.3",
-    "prisma": "^6.16.3",
-    "tailwindcss": "^4.1.13",
+    "lint-staged": "^16.2.6",
+    "prisma": "^6.18.0",
+    "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
-    "type-fest": "^5.0.1",
+    "type-fest": "^5.1.0",
     "typescript": "^5"
   },
   "lint-staged": {
