--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "db:studio": "npx prisma studio",
     "db:backfill:user": "npx tsx scripts/backfill-user-ownership.ts",
     "ts": "yarn tsc --noEmit",
+    "test": "vitest",
+    "test:watch": "vitest watch",
     "postinstall": "prisma generate",
     "vercel-build": "prisma migrate deploy && npm run db:seed:prod && next build"
   },
@@ -49,16 +51,24 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.6",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.1",
     "husky": "^9.1.7",
+    "jsdom": "^27.2.0",
     "lint-staged": "^16.2.6",
     "prisma": "^6.18.0",
     "tailwindcss": "^4.1.16",
     "tw-animate-css": "^1.4.0",
     "type-fest": "^5.1.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.14"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx,cjs,mjs,json,css,scss,md}": [
