--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bell-track",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.28.2",
   "scripts": {
     "dev": "next dev --turbopack --port 8080",
     "build": "next build --turbopack",
@@ -9,16 +10,16 @@
     "lint": "biome check",
     "format": "biome check --write",
     "prepare": "husky",
-    "db:seed": "npx tsx prisma/seed.ts",
-    "db:seed:prod": "npx tsx prisma/seed-prod.ts",
-    "db:studio": "npx prisma studio",
-    "db:backfill:user": "npx tsx scripts/backfill-user-ownership.ts",
-    "ts": "yarn tsc --noEmit",
+    "db:seed": "tsx prisma/seed.ts",
+    "db:seed:prod": "tsx prisma/seed-prod.ts",
+    "db:studio": "prisma studio",
+    "db:backfill:user": "tsx scripts/backfill-user-ownership.ts",
+    "ts": "tsc --noEmit",
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest --coverage",
     "postinstall": "prisma generate",
-    "vercel-build": "prisma migrate deploy && npm run db:seed:prod && next build"
+    "vercel-build": "prisma migrate deploy && pnpm run db:seed:prod && next build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
@@ -67,6 +68,7 @@
     "lint-staged": "^16.2.7",
     "prisma": "^6.19.1",
     "tailwindcss": "^4.1.18",
+    "tsx": "^4.20.3",
     "tw-animate-css": "^1.4.0",
     "type-fest": "^5.3.1",
     "typescript": "^5",
@@ -75,7 +77,16 @@
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx,cjs,mjs,json,css,scss,md}": [
-      "npm run format"
+      "pnpm run format"
     ]
+  },
+  "pnpm": {
+    "allowBuilds": {
+      "@prisma/client": true,
+      "@prisma/engines": true,
+      "esbuild": true,
+      "prisma": true,
+      "sharp": true
+    }
   }
 }
