--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "linkify-react": "^4.3.2",
+    "linkifyjs": "^4.3.2",
     "lucide-react": "^0.562.0",
     "next": "^16.1.6",
     "next-auth": "5.0.0-beta.30",
